--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ body {
     text-align: center;
     margin: 50px 0;
     padding: 20px;
+    /* padding-top: 10px; */
     background: linear-gradient(135deg, #ff9a9e, #fad0c4);
     border-radius: 15px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
